# services/tenant/src/main/java/io/github/smiskinext/tenant/domain/model/EnvironmentType.java
@@ -1,7 +1,0 @@
-package io.github.smiskinext.tenant.domain.model;
-
-public enum EnvironmentType {
-    DEVELOPMENT,
-    STAGING,
-    PRODUCTION
-}
